@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0103
+// generated by Fast Light User Interface Designer (fluid) version 1.0104
 
 #ifndef widget_panel_h
 #define widget_panel_h
